--- a/about.html
+++ b/about.html
@@ -56,8 +56,8 @@
       <div>
         <h3>Email Newsletter</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-        <form action="" method="POST" id="form">
-          <input type="hidden" name="access_key" value="6d5454ca-8afe-43ea-84e7-dc51bff699d0">
+        <form action="https://api.web3forms.com/submit" method="POST" id="form">
+          <input type="hidden" name="access_key" value="6d5454ca-8afe-43ea-84e7-dc51bff699d0" value="https://web3forms.com/success">
           <input type="email" name="email" placeholder="Enter Email...">
           <input type="submit" value="Subscribe" class="btn btn-primary">
         </form>
