--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div>
         <h3>Email Newsletter</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-        <form action="https://formspree.io/f/xeqbqrqr" method="POST">
+        <form action="https://formspree.io/f/mbjvldog" method="POST">
           <input type="email" name="email" placeholder="Enter Email..." required>
           <input type="submit" value="Subscribe" class="btn btn-primary">
         </form>
